// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="tertiary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost and disabled 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    disabled=""
    internals-disabled=""
    role="button"
    size="40"
    tabindex="-1"
    type="button"
    variant="tertiary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined and inverted is set 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    inverted=""
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="secondary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabled 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    disabled=""
    internals-disabled=""
    role="button"
    size="40"
    tabindex="-1"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabledOutline 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="true"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabledOutline and disabled and outline 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="true"
    data-grown="false"
    disabled=""
    internals-disabled=""
    role="button"
    size="40"
    tabindex="-1"
    type="button"
    variant="secondary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when shallow disabled 1`] = `
<div>
  <mdc-button
    aria-disabled="true"
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    soft-disabled=""
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot when width is grown 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="true"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with a postfix icon 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill-with-icon"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
    <mdc-icon
      name="placeholder-bold"
      slot="postfix"
      style="flex-shrink: 0;"
    />
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with a prefix icon 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill-with-icon"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    <mdc-icon
      name="placeholder-bold"
      slot="prefix"
      style="flex-shrink: 0;"
    />
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with both a prefix and postfix icon 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill-with-icon"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale="false"
      data-test="placeholder"
      name="placeholder-regular"
      slot="prefix"
      style="flex-shrink: 0;"
    />
    Example Text
    <mdc-icon
      class="md-icon-wrapper md-icon-auto-scales md-icon-scales md-icon-no-shrink"
      data-autoscale="false"
      data-test="placeholder"
      name="placeholder-regular"
      slot="postfix"
      style="flex-shrink: 0;"
    />
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with className 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper example-class"
    color="default"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with color 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="accent"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with id 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-disabled-outline="false"
    data-grown="false"
    id="example-id"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with size 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-btn-type="pill"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    tabindex="0"
    type="button"
    variant="primary"
  >
    Example Text
  </mdc-button>
</div>
`;

exports[`<ButtonPill /> snapshot should match snapshot with style 1`] = `
<div>
  <mdc-button
    class="md-button-pill-wrapper"
    color="default"
    data-disabled-outline="false"
    data-grown="false"
    role="button"
    size="40"
    style="color: pink;"
    tabindex="0"
    type="button"
    variant="primary"
  />
</div>
`;
